Revert "Revert "Fix horizontal and vertical scrollbars appearing on home page (Fixes #14)""

--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ body {
 .footer {
   font-size: 0.9rem;
   text-align: center;
-  padding: 20px;
+  color: white;
+  padding: 20px 0;
   width: 100%;
 }
 
